<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCreationScreen">


    <LinearLayout

        android:id="@+id/statusBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
<!--
        <include layout="@layout/statusbar_custom" />
-->
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/statusBarLayout"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/activityContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/txtClickToGenerate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|center_horizontal"
                    android:text="@string/creation_clickToGenerate"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/textColorOnLightBack"
                    android:padding="5dp" />

                <ImageView
                    android:id="@+id/creationBulb"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:onClick="createIdea"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo3"
                    android:padding="5dp"
                    android:clickable="false" />

                <LinearLayout
                    android:id="@+id/createdIdeaLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="invisible"
                    android:paddingTop="5dp"
                    android:padding="5dp">

                    <TextView
                        android:text="Created idea will appear here"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@android:color/background_dark"
                        android:textSize="20sp"
                        android:padding="10dp"
                        android:singleLine="false"
                        android:textIsSelectable="true"
                        android:textStyle="italic"
                        android:id="@+id/createdIdeaText" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/createdIdeaIconsLayout">

                        <LinearLayout
                            android:id="@+id/likeIdeaLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingRight="16dp">

                            <ImageView
                                android:id="@+id/bulbHappy"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:adjustViewBounds="true"
                                android:scaleType="fitXY"
                                android:src="@drawable/bulb_happy"
                                android:onClick="saveIdeaClicked"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/creation_ideaLike"
                                android:textColor="@android:color/background_dark" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/dislikeIdeaLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingLeft="12dp">

                            <ImageView
                                android:id="@+id/bulbSad"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:adjustViewBounds="true"
                                android:scaleType="fitXY"
                                android:src="@drawable/bulb_sad"
                                android:onClick="createIdea"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/creation_ideaDislike"
                                android:textColor="@android:color/background_dark" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/creationPreferences"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:gravity="center_vertical|center|center_horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/txtBerforeCategorySpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/creation_beforeSpinnerText"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/textColorOnDarkBack" />



                    <Spinner
                        android:id="@+id/spnIdeaCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="6dp"
                        android:alpha="0.8"
                        android:padding="6dp"
                        android:layout_gravity="center"
                        android:layout_toEndOf="@+id/txtBeforeCategorySpinner"
                        android:layout_toRightOf="@+id/txtBeforeCategorySpinner"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/txtBeforeObscurity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center|center_horizontal"
                        android:text="@string/creation_beforeObscurityText"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/textColorOnDarkBack" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="min"
                            android:textColor="@color/textColorOnDarkBack" />

                        <com.edmodo.rangebar.RangeBar xmlns:custom="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/rngObscurity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="0.5" />

                        <!--
                                        <SeekBar
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center"
                                            android:layout_weight="0.5" />
                        -->

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="max"
                            android:textColor="@color/textColorOnDarkBack" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtObscSelected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center|center_horizontal"
                        android:text="@string/creation_beforeObscurityText"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/textColorOnDarkBack" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
